fix flex-wrap of role view and update guild view

--- a/web/src/app/routes/home/home.component.sass
+++ b/web/src/app/routes/home/home.component.sass
@@ -6,21 +6,21 @@
     flex-wrap: wrap
 
 .guild-container
-    display: flex
     background-color: $c-nqblack
     width: fit-content
-    min-width: 300px
-    height: 60px
+    min-width: 250px
+    height: 310px
     margin: 0 20px 20px 0
     border-radius: 5px
     overflow: hidden
     cursor: pointer
+    overflow: hidden
 
     +hover-btn
 
     img
-        width: 60px
-        height: 60px
+        width: 250px
+        height: 250px
         border-radius: 5px 0 0 5px
 
     .info-container
